# CrowWebApp

./: .gitignore  CMakeLists.txt  README.md  binfs.hpp
3rd/binfs/: CMakeLists.txt  README.md
3rd/binfs/include/: binfs.h  path_utils.h
3rd/binfs/src/: binfs.cpp  main.cpp  path_utils.cpp
3rd/binfs/test/: pack_web_test.cpp  pack_web_test_lite.cpp
3rd/cmdline/: cmdline.h
cmake/: binfs.cmake  pack_res.cmake  pack_res0.cmake  pack_res1.cmake  pack_web.cmake
include/: api_handler.h  common_const.h  server.h
src/: CMakeLists.txt
src/common/: api_handler.cpp  server.cpp
src/webapp/: CMakeLists.txt  webapp.cpp
src/webclient/: CMakeLists.txt  webclient.cpp
src/webserver/: CMakeLists.txt
web/: index.html  script.js  style.css
